fixing sorting on mobile, now it is broken on desktop

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -258,7 +258,8 @@ p {
     margin-left: auto; }
   .item-list .item:not(.enabled) {
     -webkit-filter: grayscale(1);
-    filter: grayscale(1); }
+    filter: grayscale(1);
+    pointer-events: none; }
     .item-list .item:not(.enabled) .title,
     .item-list .item:not(.enabled) prayer-icon {
       opacity: .4; }
@@ -563,15 +564,20 @@ prayer-menu {
     prayer-menu .menu-item {
       margin-right: 64px; } }
 
+body.is-sorting prayer-app .page,
 body.has-focused-input prayer-app .page {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%; }
 
+body.is-sorting prayer-menu,
 body.has-focused-input prayer-menu {
   -webkit-transform: translateY(calc(100% + 24px));
   -ms-transform: translateY(calc(100% + 24px));
   transform: translateY(calc(100% + 24px)); }
+
+body.is-sorting {
+  overflow: hidden !important; }
 
 prayer-moment-configure {
   padding: 32px; }
