--- a/scss/components/_item-list.scss
+++ b/scss/components/_item-list.scss
@@ -36,6 +36,7 @@
 
     &:not(.enabled) {
       filter: grayscale(1);
+      pointer-events: none;
 
       .title,
       prayer-icon {
